src/BoardMakerParser.java
// Generated from BoardMaker.g4 by ANTLR 4.0


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BoardMakerParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTEGER=1, FLOAT=2, NAME=3, NAMEFIELD=4, GRAVITYFIELD=5, XFIELD=6, YFIELD=7, 
		XVELOCITYFIELD=8, YVELOCITYFIELD=9, ORIENTATIONFIELD=10, TRIGGERFIELD=11, 
		ACTIONFIELD=12, FRICTION1FIELD=13, FRICTION2FIELD=14, WIDTHFIELD=15, HEIGHTFIELD=16, 
		SQUAREBUMPERLABLE=17, CIRCLEBUMPERLABLE=18, TRIANGLEBUMPERLABLE=19, BOARDLABLE=20, 
		BALLLABLE=21, RIGHTFLIPPERLABLE=22, LEFTFLIPPERLABLE=23, ABSORBERLABLE=24, 
		FIRELABLE=25, COMMENT=26, WHITESPACE=27;
	public static final String[] tokenNames = {
		"<INVALID>", "INTEGER", "FLOAT", "NAME", "'name='", "'gravity='", "'x='", 
		"'y='", "'xvelocity='", "'yvelocity='", "'orientation='", "'trigger='", 
		"'action='", "'friction1='", "'friction2='", "'width='", "'height='", 
		"'squareBumper'", "'circleBumper'", "'triangleBumper'", "'board'", "'ball'", 
		"'rightFlipper'", "'leftFlipper'", "'absorber'", "'fire'", "COMMENT", 
		"WHITESPACE"
	};
	public static final int
		RULE_file = 0, RULE_board = 1, RULE_ball = 2, RULE_squareBumper = 3, RULE_circleBumper = 4, 
		RULE_triangleBumper = 5, RULE_rightFlipper = 6, RULE_leftFlipper = 7, 
		RULE_absorber = 8, RULE_fire = 9, RULE_name = 10, RULE_gravity = 11, RULE_friction1 = 12, 
		RULE_friction2 = 13, RULE_xball = 14, RULE_yball = 15, RULE_xvelocity = 16, 
		RULE_yvelocity = 17, RULE_orientation = 18, RULE_x = 19, RULE_y = 20, 
		RULE_trigger = 21, RULE_action = 22, RULE_width = 23, RULE_height = 24;
	public static final String[] ruleNames = {
		"file", "board", "ball", "squareBumper", "circleBumper", "triangleBumper", 
		"rightFlipper", "leftFlipper", "absorber", "fire", "name", "gravity", 
		"friction1", "friction2", "xball", "yball", "xvelocity", "yvelocity", 
		"orientation", "x", "y", "trigger", "action", "width", "height"
	};

	@Override
	public String getGrammarFileName() { return "BoardMaker.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


	    /**
	     * Call this method to have the lexer or parser throw a RuntimeException if
	     * it encounters an error.
	     */
	    public void reportErrorsAsExceptions() {
	        addErrorListener(new ExceptionThrowingErrorListener());
	    }
	    
	    private static class ExceptionThrowingErrorListener extends BaseErrorListener {
	        @Override
	        public void syntaxError(Recognizer<?, ?> recognizer,
	                Object offendingSymbol, int line, int charPositionInLine,
	                String msg, RecognitionException e) {
	            throw new RuntimeException(msg);
	        }
	    }

	public BoardMakerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public SquareBumperContext squareBumper(int i) {
			return getRuleContext(SquareBumperContext.class,i);
		}
		public CircleBumperContext circleBumper(int i) {
			return getRuleContext(CircleBumperContext.class,i);
		}
		public List<TriangleBumperContext> triangleBumper() {
			return getRuleContexts(TriangleBumperContext.class);
		}
		public List<AbsorberContext> absorber() {
			return getRuleContexts(AbsorberContext.class);
		}
		public List<BallContext> ball() {
			return getRuleContexts(BallContext.class);
		}
		public AbsorberContext absorber(int i) {
			return getRuleContext(AbsorberContext.class,i);
		}
		public List<SquareBumperContext> squareBumper() {
			return getRuleContexts(SquareBumperContext.class);
		}
		public List<CircleBumperContext> circleBumper() {
			return getRuleContexts(CircleBumperContext.class);
		}
		public BoardContext board() {
			return getRuleContext(BoardContext.class,0);
		}
		public List<FireContext> fire() {
			return getRuleContexts(FireContext.class);
		}
		public TriangleBumperContext triangleBumper(int i) {
			return getRuleContext(TriangleBumperContext.class,i);
		}
		public LeftFlipperContext leftFlipper(int i) {
			return getRuleContext(LeftFlipperContext.class,i);
		}
		public FireContext fire(int i) {
			return getRuleContext(FireContext.class,i);
		}
		public TerminalNode EOF() { return getToken(BoardMakerParser.EOF, 0); }
		public List<RightFlipperContext> rightFlipper() {
			return getRuleContexts(RightFlipperContext.class);
		}
		public BallContext ball(int i) {
			return getRuleContext(BallContext.class,i);
		}
		public RightFlipperContext rightFlipper(int i) {
			return getRuleContext(RightFlipperContext.class,i);
		}
		public List<LeftFlipperContext> leftFlipper() {
			return getRuleContexts(LeftFlipperContext.class);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); board();
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SQUAREBUMPERLABLE) | (1L << CIRCLEBUMPERLABLE) | (1L << TRIANGLEBUMPERLABLE) | (1L << BALLLABLE) | (1L << RIGHTFLIPPERLABLE) | (1L << LEFTFLIPPERLABLE) | (1L << ABSORBERLABLE) | (1L << FIRELABLE))) != 0)) {
				{
				setState(59);
				switch (_input.LA(1)) {
				case BALLLABLE:
					{
					setState(51); ball();
					}
					break;
				case SQUAREBUMPERLABLE:
					{
					setState(52); squareBumper();
					}
					break;
				case CIRCLEBUMPERLABLE:
					{
					setState(53); circleBumper();
					}
					break;
				case TRIANGLEBUMPERLABLE:
					{
					setState(54); triangleBumper();
					}
					break;
				case RIGHTFLIPPERLABLE:
					{
					setState(55); rightFlipper();
					}
					break;
				case LEFTFLIPPERLABLE:
					{
					setState(56); leftFlipper();
					}
					break;
				case ABSORBERLABLE:
					{
					setState(57); absorber();
					}
					break;
				case FIRELABLE:
					{
					setState(58); fire();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoardContext extends ParserRuleContext {
		public Friction1Context friction1() {
			return getRuleContext(Friction1Context.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode BOARDLABLE() { return getToken(BoardMakerParser.BOARDLABLE, 0); }
		public Friction2Context friction2() {
			return getRuleContext(Friction2Context.class,0);
		}
		public GravityContext gravity() {
			return getRuleContext(GravityContext.class,0);
		}
		public BoardContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_board; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterBoard(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitBoard(this);
		}
	}

	public final BoardContext board() throws RecognitionException {
		BoardContext _localctx = new BoardContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_board);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66); match(BOARDLABLE);
			setState(67); name();
			setState(68); gravity();
			setState(69); friction1();
			setState(70); friction2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BallContext extends ParserRuleContext {
		public YballContext yball() {
			return getRuleContext(YballContext.class,0);
		}
		public TerminalNode BALLLABLE() { return getToken(BoardMakerParser.BALLLABLE, 0); }
		public YvelocityContext yvelocity() {
			return getRuleContext(YvelocityContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public XvelocityContext xvelocity() {
			return getRuleContext(XvelocityContext.class,0);
		}
		public XballContext xball() {
			return getRuleContext(XballContext.class,0);
		}
		public BallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ball; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterBall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitBall(this);
		}
	}

	public final BallContext ball() throws RecognitionException {
		BallContext _localctx = new BallContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ball);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); match(BALLLABLE);
			setState(73); name();
			setState(74); xball();
			setState(75); yball();
			setState(76); xvelocity();
			setState(77); yvelocity();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SquareBumperContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public YContext y() {
			return getRuleContext(YContext.class,0);
		}
		public XContext x() {
			return getRuleContext(XContext.class,0);
		}
		public TerminalNode SQUAREBUMPERLABLE() { return getToken(BoardMakerParser.SQUAREBUMPERLABLE, 0); }
		public SquareBumperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_squareBumper; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterSquareBumper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitSquareBumper(this);
		}
	}

	public final SquareBumperContext squareBumper() throws RecognitionException {
		SquareBumperContext _localctx = new SquareBumperContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_squareBumper);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); match(SQUAREBUMPERLABLE);
			setState(80); name();
			setState(81); x();
			setState(82); y();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CircleBumperContext extends ParserRuleContext {
		public TerminalNode CIRCLEBUMPERLABLE() { return getToken(BoardMakerParser.CIRCLEBUMPERLABLE, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public YContext y() {
			return getRuleContext(YContext.class,0);
		}
		public XContext x() {
			return getRuleContext(XContext.class,0);
		}
		public CircleBumperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_circleBumper; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterCircleBumper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitCircleBumper(this);
		}
	}

	public final CircleBumperContext circleBumper() throws RecognitionException {
		CircleBumperContext _localctx = new CircleBumperContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_circleBumper);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); match(CIRCLEBUMPERLABLE);
			setState(85); name();
			setState(86); x();
			setState(87); y();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TriangleBumperContext extends ParserRuleContext {
		public OrientationContext orientation() {
			return getRuleContext(OrientationContext.class,0);
		}
		public TerminalNode TRIANGLEBUMPERLABLE() { return getToken(BoardMakerParser.TRIANGLEBUMPERLABLE, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public YContext y() {
			return getRuleContext(YContext.class,0);
		}
		public XContext x() {
			return getRuleContext(XContext.class,0);
		}
		public TriangleBumperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_triangleBumper; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterTriangleBumper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitTriangleBumper(this);
		}
	}

	public final TriangleBumperContext triangleBumper() throws RecognitionException {
		TriangleBumperContext _localctx = new TriangleBumperContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_triangleBumper);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89); match(TRIANGLEBUMPERLABLE);
			setState(90); name();
			setState(91); x();
			setState(92); y();
			setState(93); orientation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RightFlipperContext extends ParserRuleContext {
		public OrientationContext orientation() {
			return getRuleContext(OrientationContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode RIGHTFLIPPERLABLE() { return getToken(BoardMakerParser.RIGHTFLIPPERLABLE, 0); }
		public YContext y() {
			return getRuleContext(YContext.class,0);
		}
		public XContext x() {
			return getRuleContext(XContext.class,0);
		}
		public RightFlipperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rightFlipper; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterRightFlipper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitRightFlipper(this);
		}
	}

	public final RightFlipperContext rightFlipper() throws RecognitionException {
		RightFlipperContext _localctx = new RightFlipperContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_rightFlipper);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95); match(RIGHTFLIPPERLABLE);
			setState(96); name();
			setState(97); x();
			setState(98); y();
			setState(99); orientation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LeftFlipperContext extends ParserRuleContext {
		public OrientationContext orientation() {
			return getRuleContext(OrientationContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode LEFTFLIPPERLABLE() { return getToken(BoardMakerParser.LEFTFLIPPERLABLE, 0); }
		public YContext y() {
			return getRuleContext(YContext.class,0);
		}
		public XContext x() {
			return getRuleContext(XContext.class,0);
		}
		public LeftFlipperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leftFlipper; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterLeftFlipper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitLeftFlipper(this);
		}
	}

	public final LeftFlipperContext leftFlipper() throws RecognitionException {
		LeftFlipperContext _localctx = new LeftFlipperContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_leftFlipper);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); match(LEFTFLIPPERLABLE);
			setState(102); name();
			setState(103); x();
			setState(104); y();
			setState(105); orientation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbsorberContext extends ParserRuleContext {
		public HeightContext height() {
			return getRuleContext(HeightContext.class,0);
		}
		public WidthContext width() {
			return getRuleContext(WidthContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode ABSORBERLABLE() { return getToken(BoardMakerParser.ABSORBERLABLE, 0); }
		public YContext y() {
			return getRuleContext(YContext.class,0);
		}
		public XContext x() {
			return getRuleContext(XContext.class,0);
		}
		public AbsorberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_absorber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterAbsorber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitAbsorber(this);
		}
	}

	public final AbsorberContext absorber() throws RecognitionException {
		AbsorberContext _localctx = new AbsorberContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_absorber);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); match(ABSORBERLABLE);
			setState(108); name();
			setState(109); x();
			setState(110); y();
			setState(111); width();
			setState(112); height();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FireContext extends ParserRuleContext {
		public TriggerContext trigger() {
			return getRuleContext(TriggerContext.class,0);
		}
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public TerminalNode FIRELABLE() { return getToken(BoardMakerParser.FIRELABLE, 0); }
		public FireContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fire; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterFire(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitFire(this);
		}
	}

	public final FireContext fire() throws RecognitionException {
		FireContext _localctx = new FireContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fire);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(FIRELABLE);
			setState(115); trigger();
			setState(116); action();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(BoardMakerParser.NAME, 0); }
		public TerminalNode NAMEFIELD() { return getToken(BoardMakerParser.NAMEFIELD, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitName(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); match(NAMEFIELD);
			setState(119); match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GravityContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(BoardMakerParser.FLOAT, 0); }
		public TerminalNode GRAVITYFIELD() { return getToken(BoardMakerParser.GRAVITYFIELD, 0); }
		public GravityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gravity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterGravity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitGravity(this);
		}
	}

	public final GravityContext gravity() throws RecognitionException {
		GravityContext _localctx = new GravityContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_gravity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); match(GRAVITYFIELD);
			setState(122); match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Friction1Context extends ParserRuleContext {
		public TerminalNode FRICTION1FIELD() { return getToken(BoardMakerParser.FRICTION1FIELD, 0); }
		public TerminalNode FLOAT() { return getToken(BoardMakerParser.FLOAT, 0); }
		public Friction1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_friction1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterFriction1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitFriction1(this);
		}
	}

	public final Friction1Context friction1() throws RecognitionException {
		Friction1Context _localctx = new Friction1Context(_ctx, getState());
		enterRule(_localctx, 24, RULE_friction1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124); match(FRICTION1FIELD);
			setState(125); match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Friction2Context extends ParserRuleContext {
		public TerminalNode FRICTION2FIELD() { return getToken(BoardMakerParser.FRICTION2FIELD, 0); }
		public TerminalNode FLOAT() { return getToken(BoardMakerParser.FLOAT, 0); }
		public Friction2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_friction2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterFriction2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitFriction2(this);
		}
	}

	public final Friction2Context friction2() throws RecognitionException {
		Friction2Context _localctx = new Friction2Context(_ctx, getState());
		enterRule(_localctx, 26, RULE_friction2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(FRICTION2FIELD);
			setState(128); match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class XballContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(BoardMakerParser.FLOAT, 0); }
		public TerminalNode XFIELD() { return getToken(BoardMakerParser.XFIELD, 0); }
		public XballContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xball; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterXball(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitXball(this);
		}
	}

	public final XballContext xball() throws RecognitionException {
		XballContext _localctx = new XballContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_xball);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); match(XFIELD);
			setState(131); match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class YballContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(BoardMakerParser.FLOAT, 0); }
		public TerminalNode YFIELD() { return getToken(BoardMakerParser.YFIELD, 0); }
		public YballContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_yball; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).enterYball(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardMakerListener ) ((BoardMakerListener)listener).exitYball(this);
		}
	}

	public final YballContext yball() throws RecognitionException {
		YballContext _localctx = new YballContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_yball);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); match(YFIELD);
			setState(134); match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
